# industrial-motor-simulator-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Motor.h
src/: Motor.cpp  main.cpp
